Ajuste na documentação da API.
